# GraphSPME

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  test.R
.github/workflows/: style.yml  wheels.yml
GraphSPME/: DESCRIPTION  README.md
GraphSPME-examples/: EnIF Lite Implementation.ipynb  ar1_assimilation.R  ar1_assimilation.py  arp_dimension_study.R  ensemble-information-filter-AR1.ipynb  mixed_effect_arp.R  precision_estimation.R  precision_estimation.ipynb
GraphSPME/R/: RcppExports.R  cov_shrink_spd.R  graphspme-package.R
GraphSPME/inst/include/: graph_spme.hpp
GraphSPME/man/: prec_sparse.Rd
GraphSPME/src/: Makevars.win  RcppExports.cpp  graph_spme.cpp
GraphSPME/tests/testthat/: test_graphspme.R
R-package/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS.md
R-package/R/: RcppExports.R  cov_shrink_spd.R  graphspme-package.R  prec_aic.R  prec_nll.R  prec_sparse.R
R-package/man/: GraphSPME.Rd  cov_shrink_spd.Rd  prec_aic.Rd  prec_nll.Rd  prec_sparse.Rd
R-package/src/: Makevars  Makevars.win  RcppExports.cpp  graph_spme.cpp
R-package/tests/: testthat.R
R-package/tests/testthat/: test_cholmod.R  test_get_precision_nonzero.R  test_graphspme.R  test_prec_sparse.R
cmake/: RPackageInstall.cmake.in  RPackageInstallTargetSetup.cmake
cmake/modules/: FindLibR.cmake  FindR.cmake
include/adept/: adept_source.h
include/graph_spme/: graph_spme.hpp
python-package/: README.md  pyproject.toml  setup.py
python-package/src/: pybind.cpp
python-package/src/graphspme/: __init__.py
python-package/tests/: test_prec_sparse.py
