[project]
name = "GraphSPME"
description = "titanic_ml example package"
version = "0.0.1"
authors = [
    { name = "Berent Ånund Strømnes Lunde", email = "lundeberent@gmail.com" }
]
dependencies = [
    "numpy",
    "scipy",
    "pybind11"
]

[project.optional-dependencies]
dev = ["pytest",
       "black",
       "flake8"
       ]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
    "setuptools_scm>=6.2",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "cd {project}/python-package && pytest tests"
test-skip = "pp* *universal2:arm64 cp310-manylinux_i686 *musllinux* cp310-win32"
before-all = ["git clone https://gitlab.com/libeigen/eigen.git"]

[tool.cibuildwheel.windows]
test-command = "pytest {project}/python-package/tests"
