[project]
name = "GraphSPME"
description = "High dimensional precision matrix estimation with a known graphical structure"
readme = "../README.md"
# version = "0.0.1"
dynamic = ["version"]
authors = [
    { name = "Berent Ånund Strømnes Lunde", email = "lundeberent@gmail.com" }
]
dependencies = [
    "numpy",
    "scipy",
    "pybind11",
]
requires-python=">=3.8"

[project.optional-dependencies]
dev = ["pytest",
       "black",
       "flake8"
       ]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
    "setuptools_scm[toml]>=6.2",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "cd {project}/python-package && pytest tests"
test-skip = "pp* *universal2:arm64 cp310-manylinux_i686 *musllinux* cp310-win32"
before-all = ["git clone https://gitlab.com/libeigen/eigen.git"]

[tool.cibuildwheel.windows]
test-command = "pytest {project}/python-package/tests"

[tool.setuptools_scm]
root = ".."
