[project]
name = "GraphSPME"
description = "High dimensional precision matrix estimation with a known graphical structure"
readme = "README.md"
# version = "0.0.1"
dynamic = ["version"]
authors = [
    { name = "Berent Ånund Strømnes Lunde", email = "lundeberent@gmail.com" }
]
dependencies = [
    "numpy",
    "scipy",
    "pybind11",
]
requires-python=">=3.8"

[project.optional-dependencies]
dev = ["pytest",
       "black",
       "flake8"
       ]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
    "setuptools_scm[toml]>=6.2",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "cd {project}/python-package && pytest tests"
test-skip = "*universal2:arm64"
before-all = [
    "git clone --depth=1 --revision bc3b39870ecb690a623a3f49149a358b95c5781d https://gitlab.com/libeigen/eigen.git", # Eigen 5.0.1
]
skip = ["cp38-*", "cp39-*", "*musllinux*"]

[tool.cibuildwheel.windows]
test-command = "pytest {project}/python-package/tests"

[tool.setuptools_scm]
root = ".."
